issues.txt
 LOG  ✅ User stats loaded and validated: {"activeSubscriptions": 0, "favoriteCategory": "Fitness", "nextDelivery": null, "nutritionScore": 65, "ordersThisMonth": 0, "streakDays": 0, "totalOrdersCompleted": 0, "totalSaved": 0}
 LOG  Shared successfully
Android Bundling failed 72ms index.js (1 module)
 ERROR  SyntaxError: C:\Users\endga\OneDrive\Desktop\Web Dev Projects\Projects\choma\src\screens\dashboard\ProfileScreen.js: Unterminated string constant. (497:17)

  495 |
  496 |     if (activity.type === 'delivery') {
> 497 |       message += '
      |                  ^
  498 |
  499 | Order delivered successfully! Rate your experience?';
  500 |     } else if (activity.type === 'achievement') {
